Closed Bug 1011342 Opened 12 years ago Closed 12 years ago

[B2G][Camera] Focus and metering areas APIs provide wrong coordinates to driver

Categories

(Firefox OS Graveyard :: Gaia::Camera, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
2.0 S2 (23may)

People

(Reporter: aosmond, Assigned: aosmond)

Details

Attachments

(1 file, 1 obsolete file)

The camera drivers expect the focus and metering regions to be provided in the form: (x1,y1,x2,y2,weight) Where x refers to left/right and y refers to top/bottom. Presently the gonk layer provides it in the form (y1,x1,y2,x2,weight).
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Target Milestone: --- → 2.0 S2 (23may)
Attached patch bug1011342.patch, v1 (obsolete) — Splinter Review
Attachment #8423526 - Flags: review?(dhylands)
Comment on attachment 8423526 [details] [diff] [review] bug1011342.patch, v1 Review of attachment 8423526 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me
Attachment #8423526 - Flags: review?(dhylands) → review+
What is the ETA for this?
As soon as the try finishes and a sheriff checks the patch in for me. try: https://tbpl.mozilla.org/?tree=Try&rev=e36e1f619988
Keywords: checkin-needed
hey Andrew have you looked at the try results (see https://tbpl.mozilla.org/php/getParsedLog.php?id=40005889&tree=Try as example). Could this be related to your push?
Keywords: checkin-needed
(In reply to Mike Habicher [:mikeh] from comment #6) > Andrew, it looks like you need to fix this[1] as well. > > 1. > http://dxr.mozilla.org/mozilla-central/source/dom/camera/ > GonkCameraParameters.cpp#428 That also explains the test case failure. New try with that fix: https://tbpl.mozilla.org/?tree=Try&rev=ed2e3596df74
Attachment #8423526 - Attachment is obsolete: true
Comment on attachment 8425576 [details] [diff] [review] bug1011342.patch, v2 [r=dhylands] Review of attachment 8425576 [details] [diff] [review]: ----------------------------------------------------------------- Looks good.
Attachment #8425576 - Flags: review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: