Bug 1011342 - Fix how coordinates were passed in wrong order for focus/metering areas. r=dhylands